# convex_dart

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
convex_dart/example/: README.md
convex_dart/example/ios/Runner/: Info.plist
convex_dart/example/windows/: CMakeLists.txt
convex_dart/example/windows/flutter/: generated_plugins.cmake
convex_dart/example/windows/runner/: Runner.rc  main.cpp
convex_dart/ios/: convex_dart.podspec
convex_dart/lib/: convex_dart.dart
convex_dart/lib/src/: convex_client.dart
convex_dart/lib/src/rust/: frb_generated.io.dart  frb_generated.web.dart
convex_dart/linux/: CMakeLists.txt
convex_dart/macos/: convex_dart.podspec
convex_dart/rust/: Cargo.toml
convex_dart/rust/src/: frb_generated.rs
convex_dart/rust/src/api/: convex_client.rs  mod.rs
convex_dart/test/: convex_dart_test.dart
convex_dart/windows/: CMakeLists.txt
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: simple_test.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
lib/src/: convex_client.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: convex_client.dart  convex_client.freezed.dart  subscription.dart
rust/src/: frb_generated.rs
rust/src/api/: convex_client.rs  subscription.rs
(+4 files in other folders)
